# controllers/authController.js
@@ -5,7 +5,7 @@ const jwt = require('jsonwebtoken');
 const bcrypt = require('bcryptjs');
 
 // Login function for Employee, Owner, and Customer
-exports.login = async (req, res) => {
+exports.loginAdmin = async (req, res) => {
     // #swagger.tags = ['auth']
     const {
         username,
@@ -14,24 +14,7 @@ exports.login = async (req, res) => {
 
     try {
         let user = null;
-        // Determine the user type based on role
-        // switch (role) {
-        //     case 'employee':
-        //         user = await Employee.findOne({ where: { username } });
-        //         userType = 'Employee';
-        //         break;
-        //     case 'owner':
-        //         user = await Owner.findOne({ where: { username } });
-        //         userType = 'Owner';
-        //         break;
-        //     case 'customer':
-        //         user = await Customer.findOne({ where: { username } });
-        //         userType = 'Customer';
-        //         break;
-        //     default:
-        //         return res.status(400).json({ message: 'Invalid role provided' });
-        // }
-
+        let origin = req.header('origin');
         let userType = 'owner';
         user = await Owner.findOne({
             where: {
@@ -54,6 +37,78 @@ exports.login = async (req, res) => {
                 }
             });
         }
+
+        // If user not found
+        if (!user) {
+            return res.status(400).json({
+                message: `Username not found`,
+            });
+        }
+
+        let verification = true;
+        if (userType == 'customer') {
+            verification = user.verification
+        }
+
+        // Check if the password is valid
+        const isMatch = await bcrypt.compare(password, user.password);
+        if (!isMatch) {
+            return res.status(401).json({
+                message: 'Invalid credentials',
+            });
+        }
+
+        // Generate JWT token
+        const token = jwt.sign({
+                id: user.id,
+                username: user.username,
+                name: user.name,
+                email: user.email,
+                role: userType,
+                verification: verification
+            },
+            process.env.JWT_SECRET, {
+                expiresIn: '1h'
+            }
+        );
+
+        // Respond with the token and user details
+        res.json({
+            message: 'Login successful',
+            token,
+            user: {
+                id: user.id,
+                username: user.username,
+                name: user.name,
+                email: user.email,
+                role: userType,
+                verification: verification
+            },
+        });
+    } catch (error) {
+        res.status(500).json({
+            message: 'Error while logging in',
+            error: error.message
+        });
+    }
+};
+
+exports.loginCustomer = async (req, res) => {
+    // #swagger.tags = ['auth']
+    const {
+        username,
+        password
+    } = req.body; // role can be 'employee', 'owner', or 'customer'
+
+    try {
+        let user = null;
+        let origin = req.header('origin');
+        let userType = 'owner';
+        user = await Customer.findOne({
+            where: {
+                username
+            }
+        });
 
         // If user not found
         if (!user) {
