# routes/authRoute.js
@@ -1,9 +1,10 @@
 const express = require('express');
 const {authenticateToken, authorizeRole} = require('../middleware/authMiddleware');
 const router = express.Router();
-const {login, auth} = require('../controllers/authController');
+const {loginCustomer, loginAdmin, auth} = require('../controllers/authController');
 
-router.post('/api/auth/login', login);
+router.post('/api/auth/loginAdmin', loginAdmin);
+router.post('/api/auth/loginCustomer', loginCustomer);
 router.get('/api/auth', authenticateToken, auth);
 
 module.exports = router;
